--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 				<div class="img-space">
 					<img
 						class="img-style"
-						src="./assets/qr-prueba.png"
+						src="./assets/qr-apk.png"
 						alt="imagen aplicación"
 					/>
 				</div>
