--- a/index.html
+++ b/index.html
@@ -1,44 +1,49 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="styles.css" />
-		<title>Document</title>
-	</head>
-	<body>
-		<div>
-			<h1 class="title">Aplicacion ...</h1>
-			<p class="subtitle">Descarga aquí ...</p>
-		</div>
-		<div>
-			<div class="div-mobile">
-				<div class="img-space">
-					<img
-						class="img-style"
-						src="./assets/qr-apk.png"
-						alt="imagen aplicación"
-					/>
-				</div>
-				<button class="btn-descargar">
-					<a
-						href="https://www.dropbox.com/scl/fi/tutfy5ckxga8xhr131nc1/FindCar.apk?rlkey=wbluzygdsq0p3h271uayrh1qn&st=y1byaxg9&dl=1"
-						>Descargar</a
-					>
-				</button>
-			</div>
-			<div class="desk">
-				<div class="img-space">
-					<img
-						class="img-style"
-						src="./assets/qr-apk.png"
-						alt="imagen aplicación"
-					/>
-				</div>
-				<p class="text-qr">
-					Escanea el codigo QR para poder descargar nuestra aplicacion
-				</p>
-			</div>
-		</div>
-	</body>
+<
+	<!DOCTYPE html>
+<html lang="es">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <title>FindCar - Encuentra tu Vehículo Fácilmente</title>
+</head>
+<body>
+    <!-- Contenedor principal -->
+    <div class="container">
+        <!-- Sección de encabezado -->
+        <header class="header">
+            <h1 class="title">¡Encuentra tu vehículo fácilmente con FindCar!</h1>
+            <p class="subtitle">La solución rápida y segura para localizar tu automóvil.</p>
+            <div class="cta-buttons">
+                <a href="https://www.dropbox.com/scl/fi/tutfy5ckxga8xhr131nc1/FindCar.apk?rlkey=wbluzygdsq0p3h271uayrh1qn&st=y1byaxg9&dl=1" class="btn btn-primary">Descargar para Android</a>
+                <a href="#" class="btn btn-secondary">Próximamente en iOS</a>
+            </div>
+        </header>
+
+        <!-- Sección de contenido principal -->
+        <main class="main-content">
+            <!-- Imagen o código QR -->
+            <div class="qr-section">
+                <img class="qr-image" src="./assets/qr-apk.png" alt="Código QR para descargar FindCar">
+                <p class="qr-text">Escanea este código QR para descargar la aplicación directamente en tu móvil.</p>
+            </div>
+
+            <!-- Características destacadas -->
+            <section class="features">
+                <h2 class="section-title">¿Por qué elegir FindCar?</h2>
+                <ul class="features-list">
+                    <li><strong>Localización rápida:</strong> Encuentra tu vehículo en segundos.</li>
+                    <li><strong>Alertas inteligentes:</strong> Recibe notificaciones para evitar olvidos.</li>
+                    <li><strong>Compatibilidad universal:</strong> Funciona en cualquier tipo de estacionamiento.</li>
+                </ul>
+            </section>
+        </main>
+
+        <!-- Sección de pie de página -->
+        <footer class="footer">
+            <p>© 2024 FindCar. Todos los derechos reservados.</p>
+            <p><a href="#">Política de Privacidad</a> | <a href="#">Términos de Uso</a></p>
+        </footer>
+    </div>
+</body>
 </html>
