🚀 se añaden estilos y textos para la pagina

--- a/index.html
+++ b/index.html
@@ -3,29 +3,107 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Rock+Salt&display=swap"
+			rel="stylesheet"
+		/>
 		<link rel="stylesheet" href="styles.css" />
 		<title>Document</title>
 	</head>
-	<body>
+	<body class="body">
 		<div>
-			<h1 class="title">Aplicacion ...</h1>
-			<p class="subtitle">Descarga aquí ...</p>
+			<div class="header">
+				<div class="logo">
+					<img
+						class="logo"
+						src="./assets/logo.jpeg"
+						alt="logo de la aplicacion"
+					/>
+				</div>
+				<h1 class="title">Find Car</h1>
+			</div>
+			<p class="subtitle">
+				¡Encuentra tu auto perdido o reporta vehículos abandonados con
+				FindCar!
+			</p>
+			<p class="text-subtitle">
+				La app que combina cámara y GPS para localizar vehículos
+				abandonados, combatir el robo y ayudarte a verificar si uno de los
+				autos es el tuyo.
+			</p>
 		</div>
-		<div>
+		<div class="secciones">
+			<div class="check-box">
+				<p class="title-check-box">¿Qué es FindCar?</p>
+				<div class="img-check-box">
+					<img
+						class="img-style"
+						src="./assets/logo.jpeg"
+						alt="imagen aplicación"
+					/>
+				</div>
+				<p class="text-checkbox">
+					FindCar es tu aliado en la seguridad vehicular. Utiliza la cámara
+					de tu móvil y tecnología GPS para Fotografiar y registrar autos
+					abandonados, consultar si tu vehículo robado está en nuestra base
+					de datos y ayudar a otros usuarios a identificar autos en estado
+					de abandono.
+				</p>
+			</div>
+			<div class="check-box">
+				<p class="title-check-box">Características Clave</p>
+				<div class="img-check-box">
+					<img
+						class="img-style"
+						src="./assets/home-apk.jpeg"
+						alt="imagen aplicación"
+					/>
+				</div>
+				<p class="text-checkbox">
+					Captura precisa: Utiliza la cámara de tu móvil para registrar
+					autos abandonados de manera sencilla y rápida. <br />
+					Ubicación en tiempo real: Con GPS, registra con exactitud la
+					localización de cualquier vehículo. <br />
+					Búsqueda eficiente: Accede a una base de datos para investigar si
+					un auto coincide con el tuyo.
+				</p>
+			</div>
+			<div class="check-box">
+				<p class="title-check-box">Testimonios</p>
+				<div class="img-check-box">
+					<img
+						class="img-style"
+						src="./assets/happy-users-2.jpg"
+						alt="imagen aplicación"
+					/>
+				</div>
+				<p class="text-checkbox">
+					"Con FindCar, recuperé mi auto robado en menos de una semana. ¡Es
+					increíble!"<br />
+					— María López, usuaria satisfecha <br />
+					<br />
+					"Es una herramienta revolucionaria para reducir el abandono de
+					vehículos en nuestras calles."<br />
+					— Carlos Méndez, policía local
+				</p>
+			</div>
+		</div>
+		<div class="descarga">
 			<div class="div-mobile">
 				<div class="img-space">
 					<img
 						class="img-style"
-						src="./assets/qr-apk.png"
+						src="./assets/icon-download-apk.jpg"
 						alt="imagen aplicación"
 					/>
 				</div>
-				<button class="btn-descargar">
-					<a
-						href="https://www.dropbox.com/scl/fi/tutfy5ckxga8xhr131nc1/FindCar.apk?rlkey=wbluzygdsq0p3h271uayrh1qn&st=y1byaxg9&dl=1"
-						>Descargar</a
-					>
-				</button>
+				<a
+					class="button"
+					href="https://www.dropbox.com/scl/fi/tutfy5ckxga8xhr131nc1/FindCar.apk?rlkey=wbluzygdsq0p3h271uayrh1qn&st=y1byaxg9&dl=1"
+					>Descargar</a
+				>
 			</div>
 			<div class="desk">
 				<div class="img-space">
