--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 			ajustarPantalla();
 
 			// Verifica cambios de tamaño de ventana
-			window.addEventListener('resize', toggleVisibility);
+			window.addEventListener('resize', ajustarPantalla);
 		</script>
 	</body>
 </html>
