agregar requerimientos.html

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
 					vehículos en nuestras calles."<br />
 					— Carlos Méndez, policía local
 				</p>
+				<div class="check-box">
+				<p class="title-check-box">Requerimiento clave</p>
+				</div>
+				<p class="text-checkbox">
+					Para utilizar nuestra aplicación y acceder a todas sus funciones principales,
+                                        primero debes registrarte creando una cuenta con tus datos. Una vez registrado,
+                                        solo necesitas iniciar sesión para disfrutar de todas las herramientas y servicios que hemos preparado para ti.
+                                        ¡Es rápido, sencillo y seguro!
 			</div>
 		</div>
 		<div class="descarga">
