--- a/index.html
+++ b/index.html
@@ -70,6 +70,28 @@
 					un auto coincide con el tuyo.
 				</p>
 			</div>
+		</div>
+		<div class="secciones">
+			<!-- Nueva sección de requerimientos -->
+			<div class="check-box">
+				<p class="title-check-box">Requerimientos Clave</p>
+				<div class="img-check-box">
+					<img
+						class="img-style"
+						src="./assets/requirements-image.jpg"
+						alt="imagen requerimientos"
+					/>
+				</div>
+				<p class="text-checkbox">
+					Para utilizar nuestra aplicación y acceder a todas sus funciones principales,
+					primero debes registrarte creando una cuenta con tus datos. Una vez registrado,
+					solo necesitas iniciar sesión para disfrutar de todas las herramientas y servicios que hemos preparado para ti.
+					¡Es rápido, sencillo y seguro!
+				</p>
+			</div>
+		</div>
+		<div class="secciones">
+			<!-- Sección separada para testimonios -->
 			<div class="check-box">
 				<p class="title-check-box">Testimonios</p>
 				<div class="img-check-box">
@@ -88,14 +110,6 @@
 					vehículos en nuestras calles."<br />
 					— Carlos Méndez, policía local
 				</p>
-				<div class="check-box">
-				<p class="title-check-box">Requerimiento clave</p>
-				</div>
-				<p class="text-checkbox">
-					Para utilizar nuestra aplicación y acceder a todas sus funciones principales,
-                                        primero debes registrarte creando una cuenta con tus datos. Una vez registrado,
-                                        solo necesitas iniciar sesión para disfrutar de todas las herramientas y servicios que hemos preparado para ti.
-                                        ¡Es rápido, sencillo y seguro!
 			</div>
 		</div>
 		<div class="descarga">
