--- a/index.html
+++ b/index.html
@@ -74,13 +74,7 @@
 		<div class="secciones">
 			<!-- Nueva sección de requerimientos -->
 			<div class="check-box">
-				<p class="title-check-box">Requerimientos Clave</p>
-				<div class="img-check-box">
-					<img
-						class="img-style"
-						src="./assets/requirements-image.jpg"
-						alt="imagen requerimientos"
-					/>
+				<p class="title-check-box">Requerimiento Clave</p>
 				</div>
 				<p class="text-checkbox">
 					Para utilizar nuestra aplicación y acceder a todas sus funciones principales,
