--- a/index.html
+++ b/index.html
@@ -75,7 +75,6 @@
 			<!-- Nueva sección de requerimientos -->
 			<div class="check-box">
 				<p class="title-check-box">Requerimiento Clave</p>
-				</div>
 				<p class="text-checkbox">
 					Para utilizar nuestra aplicación y acceder a todas sus funciones principales,
 					primero debes registrarte creando una cuenta con tus datos. Una vez registrado,
@@ -156,6 +155,10 @@
 
 			// Verifica cambios de tamaño de ventana
 			window.addEventListener('resize', ajustarPantalla);
+		</script>
+	</body>
+</html>
+
 		</script>
 	</body>
 </html>
